✅ Final switch to production manifest URL

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "0.0.1",
   "name": "Lira Coin WebApp",
   "url": "https://www.lyracoine.com",
-  "iconUrl": "https://www.lyracoine.com/liracoin-logo.png",
+  "iconUrl": "https://www.lyracoine.com/icon.png",
   "termsOfUseUrl": "https://www.lyracoine.com/terms",
   "privacyPolicyUrl": "https://www.lyracoine.com/privacy",
   "bridge": {
