--- a/package.json
+++ b/package.json
@@ -1,39 +1,5 @@
 {
-  "name": "lira-coin-webapp",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/supabase-js": "^2.39.7",
-    "@tonconnect/sdk": "^3.1.0",
-    "@tonconnect/ui-react": "^2.1.0",
-    "axios": "^1.6.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.344.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "tailwind-merge": "^2.2.1",
-    "zustand": "^4.5.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
-    "lovable-tagger": "^1.0.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "@tonconnect/ui-react": "^2.0.0"
   }
 }
