--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@tonconnect/ui-react": "^2.0.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "vite": "^5.0.0"
   },
   "scripts": {
