--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "lovable-tagger": "^1.0.0"
   },
   "scripts": {
     "dev": "vite",
