--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "type": "module",
   "dependencies": {
     "@tonconnect/ui-react": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.16",
     "vite": "^5.0.0",
     "lovable-tagger": "^1.0.0"
   },
