--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "@tonconnect/ui-react": "^2.0.0"
+    "@tonconnect/ui-react": "^2.0.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.5.0",
