--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.39.7",
     "@tonconnect/ui-react": "^2.0.0",
-    "react-router-dom": "^6.22.3"
+    "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.358.0",
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
-    "vite": "^5.0.0",
-    "lovable-tagger": "^1.0.0"
+    "postcss": "^8.4.35",
+    "vite": "^5.0.0"
   },
   "scripts": {
     "dev": "vite",
