--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.7",
     "@tonconnect/ui-react": "^2.0.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.358.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "postcss": "^8.4.35",
-    "vite": "^5.0.0"
   },
   "scripts": {
     "dev": "vite",
